# 4-relay-Control-System

./: CMakeLists.txt
control-system/: CMakeLists.txt  control-system.c  web_page.h
examples/: CMakeLists.txt
examples/ping_client/: CMakeLists.txt  ping_client.c
examples/test1/: CMakeLists.txt  test1.c  web_page.h
libraries/: CMakeLists.txt
libraries/PING/: ping.c
